--- a/todo.txt
+++ b/todo.txt
@@ -3,37 +3,6 @@ How to deploy to surge:
 -surge --domain ng-budget.surge.sh
 
 
--setup the media query breakpoints 
-  -ideally you would use sass and it would be a variable but 
-  for now just hardcode the breakpoints 
-
-
--create the 
-
--mobile view 
- -show icons for toggling side bars 
- -set mode="push" through angular's on resize: 
-   https://stackoverflow.com/questions/35527456/angular-window-resize-event
- -stack the category on top of adding a new transaction 
-
-
--desktop view 
- -hide icons for toggling side bars
- -set mode="side"
- -do not stack category on top of adding a new transaction
-
-
-
--make responsive so that when you make the screen small 
-it stops showing the left and right hand navs. 
-
-
--hmm... is it possible to also make the right hand nav 
-appear at the click of a button in mobile view.  This 
-way you can completely do away with the progress bar 
-version of the reporting.  
-
-
 
 -create a new component that encapsulate the pie chart. 
 Basically the pie chart should take in the data which 
@@ -58,11 +27,14 @@ http://bl.ocks.org/dbuezas/9306799
 the d3 pie charts.  Expanded or collapsed.  Collapsed would 
 be a simple bar with colors.  No explanations at all.  
 
+-make the header sticky
 
--in mobile view the category, amount, new transaction boxes should be 
-on 2 lines.  In desktop view it should be all on one line.  
--For responsive we will only 2 breakpoints: desktop and phone. 
 
+
+-maybe in the future you can have 3 media query breakpoints:
+  -desktop: would show both side navs
+  -tablet: would only show the reporting nav 
+  -phone: would show no navs
 
 -add a snackbar for whenever you add a transaction.  You should be 
 able to quickly undo a transaction from this. 
@@ -82,37 +54,13 @@ navigation bar.
 -https://material.io/icons/
 
 
--design for mobile view first! 
--make the header sticky
 
 -need to spend some time learning material UI
   -watch a video 
   -do themes give you css related to fonts and link colors?
 
--watch some design videos and see how you can improve the design 
--Designing the page 
-  -we need a consistent header and footer 
-  -the header should contain some consistent nav.  It should have a button 
-  to easily take you to the budget list page. 
--make responsive
--add styling to make it look nicer 
--attempt to use a material design component to replace the dumb components
-  -Get familiar with all of the components. 
-  -List here possible components you might use:
-    -Input
-    -Button 
-    
-  -for each piece of UI you have think of what a good material design 
-  component replacement might be.
-  -Refactor to use the material design component. 
-
-
-
-
 
 -unit test actions creator service 
-
-
 -prevent navigating to earlier months than begin date.  Same 
 with end date. 
 -prevent going ahead to months that are in the future. 
