--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,24 @@ How to deploy to surge:
 -surge --domain ng-budget.surge.sh
 
 
+read
+-https://bost.ocks.org/mike/join/
+-https://bost.ocks.org/mike/circles/
+-https://bost.ocks.org/mike/selection/
+-https://bost.ocks.org/mike/d3/workshop/#33
+
+
+pie 
+-Add labels to each slice of the pie.  Have the label say the 
+ amount in dollars
+  -https://bl.ocks.org/mbostock/3887235
+-Bind to the real data   
+  -update the ngrx selectors 
+-Animate!  
+  -any time you add a new transaction have it update 
+
+
+-https://material.io/icons/
 
 -create a new component that encapsulate the pie chart. 
 Basically the pie chart should take in the data which 
