prevent duplicate categories from being added

--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,8 @@ Everyday:
 and lint isn't failing.
 
 Plan:
--prevent duplicate categories from being added 
+-research how to do angular2 forms.
+-fix pie chart 
 -write end to end tests instead of smart component unit tests 
   -start with a blank empty budget and create 2 budgets from 
   scratch 
@@ -28,11 +29,10 @@ Plan:
 -prevent navigating to earlier months than begin date.  Same 
 with end date. 
 -prevent going ahead to months that are in the future. 
--research how to do angular2 forms.
 -Use constants for your action types
 -write unit tests for dumb components
 -implement exporting and importing budgets 
-
+-need to write a ton of documentation
 
 
 
